# MulticoreMinHash

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  docreader.c  graph.py  main.c  makefile  seq_main.c  seq_main.h  txt_reader.c  txt_reader.h  utils.c  utils.h
docs/: Frank Basketball.txt  Frank Soccer.txt  Liam Soccer.txt  capra1.txt  capra2.txt  capra_sopra.txt  capra_sotto.txt
src/: graph.py  io_interface.c  main.c  main.h  minhash.c  minhash.h  structures.h  txt_reader.c  txt_reader.h  utils.c  utils.h
src/MPI/: io_interface.c  main.c  minhash.c  minhash.h  structures.h
src/OMP/: io_interface.c  io_interface.h  main.c  minhash.c  minhash.h  structures.h  utils.c
